# GLP

./: .gitignore  Makefile  README.md
GLP/: CMakeLists.txt  Common.cmake  GLP.1  headfiles.sh  main.cpp
GLP.xcodeproj/: project.pbxproj
GLP.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
GLP/Classes/: CMakeLists.txt  SLGlp.h  SLUtility.h
GLP/Classes/Extensions/: MatrixExt.cpp  MatrixExt.h
GLP/Classes/Factory/: SLGlpCombination.h  SLGlpFactory.h  SLGlpProduct.h  SLGspanSparsePlsFactory.cpp  SLGspanSparsePlsFactory.h
GLP/Classes/GLP/: SLGlp.h
GLP/Classes/GLP/GraphMining/: SLGspan.h
GLP/Classes/GLP/GraphMining/Gspan/: Dfs.cpp  Dfs.h
GLP/Classes/GLP/Models/: SLModelStrategy.cpp  SLNipals.h
GLP/Classes/GraphMining/: SLGraphMining.h  SLGraphMiningStrategy.h  SLGspan.cpp  SLGspan.h
GLP/Classes/GraphMining/Gspan/: Dfs.h  Graph.cpp  Graph.h  Utility.cpp  Utility.h  darts.h  mmap.h  tree.hh
GLP/Classes/Models/: SLModel.h  SLModelStrategy.cpp  SLModelStrategy.h  SLNipals.cpp  SLSparsePls.cpp  SLSparsePls.h
GLP/Classes/Utilities/: SLCrossValidation.h  SLCrossValidationResultHistory.h  SLCrossValidationResults.h
GLP/Doxygen/: Doxyfile  Mainpage.dox
GLP/Examples/: CMakeLists.txt  gspan.cpp  gspan_pls.cpp  gspls.cpp
GLP/Examples/datasets/: 1862drugs.gsp  CAS.gsp  es.gsp  seY.txt  seYsmall.txt  sideEfDrugs.gsp  sideEfDrugsAnnot.gsp
GLP/Examples/gspls/: CMakeLists.txt  gspls  gspls-classify-main.cpp  gspls-classify.cpp  gspls-classify.cpp.txt  gspls-classify.hpp  gspls-train-main.cpp  gspls-train.cpp  gspls-train.hpp  gspls.cpp.old  main.cpp
GLP/Test/: CMakeLists.txt  GspanTest.cpp  NipalsTest.cpp  SparsePlsTest.cpp  gspls.cpp
data/: Ymatrix.txt  mutagen.gsp  mutagen.label  mutagen.sdf  mutagen_test.gsp  mutagen_test.label  mutagen_test_multiple.label  mutagen_train.gsp  mutagen_train.label  mutagen_train_multiple.label
tools/: consolext.py  dfs2dot.pl  dfs2sdf.pl  matchvec.R  mk_train_test.py  mktraintest.py  sdf2gsp.pl  sdf2gsp.py  sdf2png.sh
