add_executable(gspls gspls.cpp)
add_executable(gspan gspan.cpp)
add_executable(gspls_static gspls.cpp)
add_executable(gspan_static gspan.cpp)
add_executable(gspan_pls_static gspan_pls.cpp)

target_link_libraries(gspls LINK_PUBLIC glp)
target_link_libraries(gspan LINK_PUBLIC glp)
target_link_libraries(gspls_static LINK_PUBLIC glp_static)
target_link_libraries(gspan_static LINK_PUBLIC glp_static)
target_link_libraries(gspan_pls_static LINK_PUBLIC glp_static)

IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
  set_target_properties(gspls_static PROPERTIES LINK_FLAGS "-static")
  set_target_properties(gspan_static PROPERTIES LINK_FLAGS "-static")
  set_target_properties(gspan_pls_static PROPERTIES LINK_FLAGS "-static")
ENDIF()

install_targets(/bin gspls)
install_targets(/bin gspan)
install_targets(/bin gspls_static)
install_targets(/bin gspan_static)
install_targets(/bin gspan_pls_static)
